fix(web): issue with dialog heading overflow for long words

--- a/web/assets/css/transmission-app.scss
+++ b/web/assets/css/transmission-app.scss
@@ -1564,6 +1564,7 @@ dialog {
   display: flex;
   font-size: 1.2em;
   font-weight: bold;
+  line-break: anywhere;
   overflow-wrap: anywhere;
 }
 
